# strobing-interferometer

./: .gitignore  .vale.ini  404.html  Analysis_example.ipynb  README.md  index.html  objects.inv  pyproject.toml  setup.py  shell.nix  thorcam.nix  thorcam.py
.ipynb_checkpoints/: Analysis_example-checkpoint.ipynb
aquisition_interface/: camera.py  fake_cam.py  gui.py  gui.ui  launcher.py  processing.py  utils.py  window.py
docs/: mkdocs.yml
docs/docs/: getting_started.md  glossary.md  index.md
docs/docs/membrane_holder/: .assembly_and_loading.md.swp  assembly_and_loading.md
docs/docs/optical_setup/: alignment_FAQ.md  pinhole_alignment.md  presentation.md
docs/docs/programs/: acquisition_tutorial.md  analysis.md  file_format.md  python_module_reference.md
getting_started/: index.html
membrane_holder/assembly_and_loading/: index.html
nix/: 01-thorcam.patch  libthorlabs.nix  package.nix  thorcam.nix  thorlabs_tsi_sdk_sources.nix
npins/: sources.json
optical_setup/alignment_FAQ/: index.html
optical_setup/pinhole_alignment/: index.html
optical_setup/presentation/: index.html
playground_thorlab_sdk/: .gitignore  Makefile  default.nix  shell.nix
playground_thorlab_sdk/src/: tl_camera_sdk_load.c
programs/acquisition_tutorial/: index.html
programs/analysis/: index.html
programs/file_format/: index.html
programs/python_module_reference/: index.html
search/: search_index.json
src/strobing_interferometer/: acquisition.py  analysis.py
strobing_interferometer/: acquisition.py  analysis.py  gui.py  gui.ui  idle_camera.py
(+2 files in other folders)
